# Ads-Chair

./: .gitignore  README.md  docker-compose.yml
Backend/: Dockerfile  pyproject.toml
Backend/app/: metrics.py  session.py
backend/: Dockerfile  pyproject.toml
backend/app/: detector.py  main.py  nlp_config.py  session.py
backend_1/app/: main.py
esp/activity/: activity.ino
frontend/: Dockerfile  index.html
grafana/dashboards/: Ads-Chair.json
prometheus/: prometheus.yml
